@@ -14,7 +14,7 @@ public final class ProcessBuilderProvider {
     public static ProcessBuilder command(List<String> command) {
         List<String> effectiveCommand = new ArrayList<>(command);
         if (OS.WINDOWS.isCurrentOs()) {
-            effectiveCommand.addAll(0, Arrays.asList("cmd", "/c"));
+            effectiveCommand = List.of("cmd", "/c", "\"", String.join(" ", effectiveCommand), "\"");
         }
 
         return new ProcessBuilder(effectiveCommand);
